<resources>
    <string name="app_name">Are We There Yet wrigh517</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="textLocationHint">Enter New Location</string>
    <string name="textProvider">Dummy Provider</string>
    <string name="thetextProvider">Dummy Provider</string>
    <string name="textLatitude">Dummy Lat</string>
    <string name="textLong">Dummy Long</string>
    <string name="textTo">Dummy To</string>
    <string name="textDistance">Dummy Distance</string>
    <string name="textNewLocLabel">Dummy New Location</string>
    <string name="textNewLoc">New Location</string>
    <string name="textLabelProvider">Provider:</string>
    <string name="textLabelLat">Latitude:</string>
    <string name="textLabelLong">Longitude:</string>
    <string name="action_EB">1230 Engineering</string>
    <string name="action_sparty">Sparty</string>
    <string name="action_home">Home</string>
    <string name="eb1230">1230 Enginnering</string>
    <string name="sparty">Sparty</string>
    <string name="home">Home</string>
    <string name="exception">Failed to communicate with geolocation services</string>
    <string name="couldnotfind">Unable to locate address</string>
</resources>
