<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity"
    android:id="@+id/layoutView">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/textProvider"
        android:id="@+id/textProvider"
        android:layout_alignParentTop="true"
        android:layout_toRightOf="@+id/textLabelLat"
        android:layout_toEndOf="@+id/textLabelLat"
        android:paddingLeft="20dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/textLabelProvider"
        android:id="@+id/textLabelProvider"
        android:layout_alignParentTop="true"
        android:layout_alignRight="@+id/textLabelLong"
        android:layout_alignEnd="@+id/textLabelLong"
        android:textStyle="bold" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/textLabelLat"
        android:id="@+id/textLabelLat"
        android:layout_below="@+id/textLabelProvider"
        android:layout_alignRight="@+id/textLabelLong"
        android:layout_alignEnd="@+id/textLabelLong"
        android:textStyle="bold" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/textLabelLong"
        android:id="@+id/textLabelLong"
        android:layout_below="@+id/textLabelLat"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:textStyle="bold" />

    <TextView
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/textLatitude"
        android:id="@+id/textLat"
        android:layout_alignTop="@+id/textLabelLat"
        android:layout_toRightOf="@+id/textLabelLat"
        android:layout_toEndOf="@+id/textLabelLat"
        android:paddingLeft="20dp" />

    <TextView
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/textLong"
        android:id="@+id/textLong"
        android:layout_below="@+id/textLat"
        android:layout_alignLeft="@+id/textLat"
        android:layout_alignStart="@+id/textLat"
        android:paddingLeft="20dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/textTo"
        android:id="@+id/textTo"
        android:paddingTop="40dp"
        android:layout_below="@+id/textLong"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/textDistance"
        android:id="@+id/textDistance"
        android:layout_below="@+id/textTo"
        android:layout_centerHorizontal="true"
        android:textStyle="bold" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/textNewLocLabel"
        android:id="@+id/textNewLocLabel"
        android:layout_below="@+id/textDistance"
        android:layout_centerHorizontal="true"
        android:paddingTop="40dp"
        android:textStyle="italic"
        android:textSize="15sp" />

    <EditText
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:id="@+id/editLocation"
        android:hint="@string/textLocationHint"
        android:layout_below="@+id/textNewLocLabel"
        android:layout_centerHorizontal="true"
        android:textAlignment="center" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/textNewLoc"
        android:id="@+id/buttonNewLoc"
        android:layout_below="@+id/editLocation"
        android:layout_centerHorizontal="true"
        android:onClick="onNew" />

</RelativeLayout>
